--- a/config/database.yml
+++ b/config/database.yml
@@ -8,11 +8,15 @@ default: &default
   adapter: postgresql
   pool: 5
   timeout: 5000
-  user: postgres
+  user: "postgres" # для Ubuntu
+  password: "postgres"
 
 development:
   <<: *default
   database: my_habr_dev
+test:
+  <<: *default
+  database: my_habr_test
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
